11_minikube/_backups/backups/inbound-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inbound-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inbound-api
  template:
    metadata:
      labels:
        app: inbound-api
    spec:
      containers:
      - name: tracking-api
        image: pierone.stups.zalan.do/cat/inbound-api:pr-276-55
        volumeMounts: 
        - name: credentials
          mountPath: /meta/credentials
        ports:
        - name: api
          containerPort: 8080
      volumes:
      - name: credentials
        hostPath: 
          path: /mnt/minikube/credentials/inbound-api
          type: Directory
